--- a/src/styles.css
+++ b/src/styles.css
@@ -1,1 +1,55 @@
-/* You can add global styles to this file, and also import other style files */
+@tailwind base;
+@tailwind components;
+@tailwind utilities;
+
+@font-face {
+    font-family: 'Cairo-Light';
+    src: url('../public/fonts/Cairo-Light.ttf') format('truetype');
+    font-weight: normal;
+    font-style: normal;
+}
+
+@font-face {
+    font-family: 'Cairo-Medium';
+    src: url('../public/fonts/Cairo-Medium.ttf') format('truetype');
+    font-weight: normal;
+    font-style: normal;
+}
+
+@font-face {
+    font-family: 'Cairo-Bold';
+    src: url('../public/fonts/Cairo-Bold.ttf') format('truetype');
+    font-weight: normal;
+    font-style: normal;
+}
+
+.font-Cairo {
+    font-family: 'Cairo', sans-serif;
+}
+
+.video-docker video {
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+}
+
+.p-menubar-start {
+    margin: auto;
+}
+
+.p-menubar-end {
+    margin: auto;
+}
+
+.video-docker::after {
+    content: "";
+    position: absolute;
+    width: 100%;
+    height: 100%;
+    top: 0;
+    left: 0;
+    background: rgba(0, 0, 0, 0.6);
+    z-index: 1;
+}
+html, body { height: 100%; }
+body { margin: 0; font-family: Roboto, "Helvetica Neue", sans-serif; }
