--- a/src/app/components/pages/appointment/appointment.component.html
+++ b/src/app/components/pages/appointment/appointment.component.html
@@ -2,7 +2,7 @@
   <div class="wrapper bg-white rounded shadow w-full ">
     <div class="header flex justify-between border-b p-2">
       <div class="buttons">
-        <button class="p-1">
+        <button class="p-1" (click)="nextMonth()">
           <svg width="1em" fill="gray" height="1em" viewBox="0 0 16 16" class="bi bi-arrow-right-circle"
             fill="currentColor" xmlns="http://www.w3.org/2000/svg">
             <path fill-rule="evenodd" d="M8 15A7 7 0 1 0 8 1a7 7 0 0 0 0 14zm0 1A8 8 0 1 0 8 0a8 8 0 0 0 0 16z" />
@@ -13,7 +13,7 @@
         </button>
       </div>
       <span class="text-lg font-bold">
-        2020 July
+        {{currentYear}} {{currentMonth}} 
       </span>
     </div>
 
@@ -393,14 +393,8 @@
   </div>
 </div>
 <ng-template #modalContent>
-  <mat-form-field>
-    <mat-label>Pick a time</mat-label>
-    <input matInput [formControl]="formControl" [matTimepicker]="picker">
-    <mat-timepicker-toggle matIconSuffix [for]="picker"/>
-    <mat-timepicker #picker/>
-  </mat-form-field>
-  
-  <p>Value: {{formControl.value}}</p>
-  <p>Touched: {{formControl.touched}}</p>
-  <p>Dirty: {{formControl.dirty}}</p>
+
 </ng-template>
+<div class="card flex justify-content-center">
+  <p-dropdown [options]="cities" [(ngModel)]="selectedCity" optionLabel="name" placeholder="Select a City" />
+</div>
