transfer to modules

--- a/src/app/home/components/home.component.html
+++ b/src/app/home/components/home.component.html
@@ -71,7 +71,7 @@
                             {{item.title}}
                         </h5>
                         <p class="mb-3 font-normal text-gray-500" *ngIf="item.content">
-                            {{item.content | textSplicer: 100 }}
+                            {{item.content }}
                         </p>
                         <a 
                             class="inline-flex items-center px-3 py-2 text-sm font-medium text-center text-white bg-[#4B3955] rounded-lg hover:bg-[#664d73] focus:ring-4 focus:outline-none focus:ring-[#4B3955] ">
