--- a/src/styles.css
+++ b/src/styles.css
@@ -51,5 +51,5 @@
     background: rgba(0, 0, 0, 0.6);
     z-index: 1;
 }
-html, body { height: 100%; }
-body { margin: 0; font-family: Roboto, "Helvetica Neue", sans-serif; }
+/* html, body { height: 100%; } */
+/* body { margin: 0; font-family: Roboto, "Helvetica Neue", sans-serif; } */
