--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,5 +1,7 @@
-<!-- <div class="div" > -->
-    <!-- <app-header [sections]="sections"></app-header> -->
-    <router-outlet></router-outlet>
-    <!-- <app-footer [services]="services"></app-footer> -->
-<!-- </div> -->
+<router-outlet></router-outlet>
+
+<a href="https://api.whatsapp.com/send?phone=+20100523322&text=test." 
+   class="z-40 fixed w-14 h-14 bottom-14 md:bottom-4 right-10 bg-green-500 text-white rounded-full flex items-center justify-center text-2xl shadow-md hover:bg-green-600 transition-transform" 
+   target="_blank">
+   <i class="pi pi-whatsapp" style="font-size: 2rem"></i>
+</a>
