--- a/src/app/user/appointment/appointment.component.html
+++ b/src/app/user/appointment/appointment.component.html
@@ -1,3 +1,3 @@
-<div class="container mx-auto mt-10 font-cairo-medium">
+<div class="container mx-auto mt-10 font-cairo-medium" *ngIf="isBrowser">
   <full-calendar [options]="calendarOptions"></full-calendar>
 </div>
