--- a/src/app/user/home/components/home.component.html
+++ b/src/app/user/home/components/home.component.html
@@ -28,20 +28,19 @@
                     مرحباً في مركز اركان للعيون
                 </h2>
                 <p class="mb-4 font-light lg:text-xl text-[#D4AF7F]">
-                    يمكننا تغيير حياة الآخرين للأفضل في أي وقت!
+                    الرعاية الطبية المتخصصة في صحة العيون
                 </p>
                 <div class="mb-6 border-t border-b border-gray-200">
                     <div class="flex pt-4">
                         <p class="mb-2 font-light text-gray-500">
-                            يضم مركز اركان لطب و جراحة العيون نخبة كبيرة من الاستشاريين
-                            المتخصصين والخبراء تحت اشراف المدير التنفيذي أستاذ دكتور فتحي
-                            اركان استشاري طب و جراحة العيون، عضو الجمعية الامريكية والاوروبية
-                            للمياه البيضاء و تصحيح الابصار، حاصل علي دبلوم طب و جراحة العيون
-                            من كلية الجراحين الملكية بلندن، حاصل على الزمالة من كلية الجراحين
-                            الملكية بأدنبرة، حاصل على الزمالة في المياه الزرقاء من جامعة
-                            كورنيل بنيويورك، عمل كمدير طبي و كبير استشاري طب و جراحة العيون
-                            بمستشفيات المغربي للعيون بجدة السعودية و القاهرة مصر، وحاليا
-                            المدير التنفيذي بمراكز اركان لطب و جراحة العيون
+                            يعد مركز أركان للعيون واحدًا من المراكز الطبية الرائدة في مجال طب وجراحة العيون. تم تأسيس
+                            المركز بهدف تقديم أفضل الخدمات العلاجية والتشخيصية للمرضى، مع التركيز على الجودة،
+                            والاحترافية، والابتكار في علاج أمراض العيون المختلفة.
+                            يضم المركز فريقًا من الأطباء المتخصصين ذوي الخبرة الواسعة في طب وجراحة العيون، ممن يعملون
+                            باستخدام أحدث الأجهزة الطبية في هذا المجال. نحن في مركز أركان للعيون نلتزم بتوفير بيئة طبية
+                            آمنة، حيث يُعامل كل مريض كأولوية ونتابع حالته عن كثب لضمان أفضل النتائج العلاجية.
+                            نحن في مركز أركان للعيون ملتزمون بتقديم الرعاية الطبية الأمثل لجميع مرضانا لضمان صحة عيونهم
+                            ورؤية واضحة ومشرقة.
                         </p>
                     </div>
                 </div>
@@ -127,7 +126,7 @@
                 </div>
             </div>
         </div>
-        
+
         <button routerLink="/doctors"
             class="flex items-center gap-2 bg-[#4B3955] hover:bg-[#664d73] rounded-lg shadow-sm text-lg text-white font-semibold py-4 px-8 transition-all duration-500 mt-10 mx-auto">
             تعرف علي المزيد من أطبائنا
