--- a/src/app/user/component/user.component.html
+++ b/src/app/user/component/user.component.html
@@ -1,5 +1,5 @@
 <div class="div" >
     <app-header></app-header>
     <router-outlet></router-outlet>
-    <app-footer [services]="services"></app-footer>
+    <app-footer></app-footer>
 </div>
