--- a/src/app/user/contact/contact.component.html
+++ b/src/app/user/contact/contact.component.html
@@ -47,9 +47,9 @@
                             <a class="text-[#4B3955] leading-relaxed">claims&#64;arkaneyecenter.com</a>
                             <h2 class="title-font font-semibold text-gray-900 tracking-widest text-xs mt-4">رقم الهاتف
                             </h2>
-                            <p class="leading-relaxed">+02553645192</p>
-                            <p class="leading-relaxed">+20100523322</p>
-                            <p class="leading-relaxed">+201128755999</p>
+                            <p class="leading-relaxed">02553645192+</p>
+                            <p class="leading-relaxed">20100523322+</p>
+                            <p class="leading-relaxed">201128755999+</p>
                         </div>
                         <div class="lg:w-1/2 px-6">
                             <h2 class="title-font font-semibold text-gray-900 tracking-widest text-xs">العنوان</h2>
