--- a/src/app/user/layout/header/header.component.html
+++ b/src/app/user/layout/header/header.component.html
@@ -1,7 +1,21 @@
-<div class="w-full h-8 bg-[#4B3955]">
-    <div class="container mx-auto flex justify-center w-full">
+<div class="w-full h-8 bg-[#4B3955] flex items-center">
+    <div class="container mx-auto">
+        <div class="flex justify-between items-center h-full px-4">
+            <!-- الهاتف على اليسار -->
+            <div class="text-sm text-white flex items-center gap-2">
+                <i class="pi pi-phone"></i>
+                <span>02553645192+</span>
+            </div>
+    
+            <!-- البريد الإلكتروني على اليمين -->
+            <div class="text-sm text-white flex items-center gap-2">
+                <i class="pi pi-envelope"></i>
+                <span>info&#64;arkaneyecenter.com</span>
+            </div>
+        </div>
     </div>
 </div>
+
 
 <p-menubar [model]="items" 
     styleClass="font-cairo-medium bg-white shadow sticky top-0 z-50">
