--- a/src/app/user/layout/footer/footer.component.html
+++ b/src/app/user/layout/footer/footer.component.html
@@ -1,62 +1,107 @@
+<footer class=" bg-[#f7f7f7] mt-10 w-full">
+    <div class="mx-auto max-w-7xl px-4 sm:px-6 lg:px-8">
+        <!--Grid-->
+        <div class="grid grid-cols-2 sm:grid-cols-4 lg:grid-cols-6 gap-3 md:gap-8 py-10 max-sm:max-w-sm max-sm:mx-auto gap-y-8">
+            <div class="col-span-full mb-10 lg:col-span-2 lg:mb-0">
+                <a routerLink="/home" class="flex justify-center lg:justify-start">
+                    <img src="logo2.png" class="h-14 me-3" alt="FlowBite Logo" />
+                </a>
+                <p class="py-8 text-sm text-gray-500 lg:max-w-xs text-center lg:text-right">
+                    يعد مركز أركان للعيون واحدًا من المراكز الطبية الرائدة في مجال طب وجراحة العيون. تم تأسيس المركز
+                    بهدف تقديم أفضل الخدمات العلاجية والتشخيصية للمرضى، مع التركيز على الجودة. </p>
+                <a routerLink="/contactus"
+                    class="py-2.5 px-5 h-9 block w-fit bg-[#4B3955] rounded-full shadow-sm text-xs text-white mx-auto transition-all  duration-500 hover:bg-[#664d73] lg:mx-0">
+                    إتصل بنا
+                </a>
+            </div>
+            <!--End Col-->
+            <div class="lg:mx-auto text-right ">
+                <h4 class="text-lg text-gray-900 font-medium mb-7">خدماتنا</h4>
+                <ul class="text-sm  transition-all duration-500">
+                    <li class="mb-4">
+                        <a class="hover:underline"></a>
+                    </li>
+                    <li *ngFor="let service of services | slice: 0:4" class="mb-6">
+                        <a routerLink="/service/service.id" class="text-gray-600 hover:text-gray-900">
+                            {{service.title | textSplicer: 10}}
+                        </a>
+                    </li>
+                </ul>
+            </div>
+            <!--End Col-->
+            <div class="lg:mx-auto text-right ">
+                <h4 class="text-lg text-gray-900 font-medium mb-7">المقالات</h4>
+                <ul class="text-sm  transition-all duration-500">
 
-
-<footer class="bg-[#f7f7f7] mt-10">
-  <div class="mx-auto w-full max-w-screen-xl p-4 py-6 lg:py-8">
-      <div class="md:flex md:justify-between">
-        <div class="mb-6 md:mb-0">
-            <a href="https://flowbite.com/" class="flex items-center">
-                <img src="logo2.png" class="h-14 me-3" alt="FlowBite Logo" />
-            </a>
+                </ul>
+            </div>
+            <!--End Col-->
+            <div class="lg:mx-auto text-right">
+                <h4 class="text-lg text-gray-900 font-medium mb-7">البصريات</h4>
+                <ul class="text-sm  transition-all duration-500">
+                </ul>
+            </div>
+            <!--End Col-->
+            <div class="lg:mx-auto text-right">
+                <h4 class="text-lg text-gray-900 font-medium mb-7">جهات الاتصال</h4>
+                <ul class="text-sm  transition-all duration-500">
+                    <li class="mb-6">
+                        <a class="text-gray-600 hover:text-gray-900">
+                            <span>info&#64;arkaneyecenter.com</span>
+                        </a>
+                    </li>
+                    <li class="mb-6">
+                        <a class="text-gray-600 hover:text-gray-900">
+                            <span class="block">02553645192+</span>
+                            <span class="block">20100523322+</span>
+                            <span class="block">201128755999+</span>
+                        </a>
+                    </li>
+                    <li class="mb-6">
+                        <a class="text-gray-600 hover:text-gray-900">
+                            <span>
+                                كوبري البطل، شارع وجيه أباظة، منيا القمح، الشرقية   
+                            </span>
+                        </a>
+                    </li>
+                </ul>
+            </div>
         </div>
-        <div class="grid grid-cols-2 gap-8 sm:gap-6 sm:grid-cols-3">
-            <div>
-                <h2 class="mb-6 text-sm font-semibold text-gray-900 uppercase ">خدماتنا</h2>
-                <ul class="text-gray-500  font-medium">
-                    <li class="mb-4" *ngFor="let service of services | slice: 0:4">
-                        <a class="hover:underline">{{service.title | textSplicer: 10}}</a>
-                    </li>
-                </ul>
-            </div>
-            <div>
-                <h2 class="mb-6 text-sm font-semibold text-gray-900 uppercase ">Follow us</h2>
-                <ul class="text-gray-500  font-medium">
-                    <li class="mb-4">
-                        <a href="https://github.com/themesberg/flowbite" class="hover:underline ">Github</a>
-                    </li>
-                    <li>
-                        <a href="https://discord.gg/4eeurUVvTy" class="hover:underline">Discord</a>
-                    </li>
-                </ul>
-            </div>
-            <div>
-                <h2 class="mb-6 text-sm font-semibold text-gray-900 uppercase ">Legal</h2>
-                <ul class="text-gray-500  font-medium">
-                    <li class="mb-4">
-                        <a href="#" class="hover:underline">Privacy Policy</a>
-                    </li>
-                    <li>
-                        <a href="#" class="hover:underline">Terms &amp; Conditions</a>
-                    </li>
-                </ul>
+        <!--Grid-->
+        <div class="py-7 border-t border-gray-200">
+            <div class="flex items-center justify-center flex-col lg:justify-between lg:flex-row">
+                <span class="text-sm text-gray-500 sm:text-center "><a href="/" class="hover:underline">
+                        جميع الحقوق محفوظة لمركز اركان للعيون
+                    </a>.© 2024
+                </span>
+                <div class="flex mt-4 space-x-4 sm:justify-center lg:mt-0 ">
+                    <a href="https://www.facebook.com/profile.php?id=61561880304599"
+                        class="w-9 h-9 rounded-full bg-[#4B3955] flex justify-center items-center hover:bg-[#664d73]">
+                        <svg class="w-[1.25rem] h-[0.875rem] text-white" viewBox="-5 0 20 20" version="1.1"
+                            xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" fill="#ffffff"
+                            stroke="#ffffff">
+                            <g id="SVGRepo_bgCarrier" stroke-width="0"></g>
+                            <g id="SVGRepo_tracerCarrier" stroke-linecap="round" stroke-linejoin="round"></g>
+                            <g id="SVGRepo_iconCarrier">
+                                <title>facebook [#176]</title>
+                                <desc>Created with Sketch.</desc>
+                                <defs> </defs>
+                                <g id="Page-1" stroke="none" stroke-width="1" fill="none" fill-rule="evenodd">
+                                    <g id="Dribbble-Light-Preview" transform="translate(-385.000000, -7399.000000)"
+                                        fill="#ffffff">
+                                        <g id="icons" transform="translate(56.000000, 160.000000)">
+                                            <path
+                                                d="M335.821282,7259 L335.821282,7250 L338.553693,7250 L339,7246 L335.821282,7246 L335.821282,7244.052 C335.821282,7243.022 335.847593,7242 337.286884,7242 L338.744689,7242 L338.744689,7239.14 C338.744689,7239.097 337.492497,7239 336.225687,7239 C333.580004,7239 331.923407,7240.657 331.923407,7243.7 L331.923407,7246 L329,7246 L329,7250 L331.923407,7250 L331.923407,7259 L335.821282,7259 Z"
+                                                id="facebook-[#176]"> </path>
+                                        </g>
+                                    </g>
+                                </g>
+                            </g>
+                        </svg>
+
+                    </a>
+                </div>
             </div>
         </div>
     </div>
-
-    
-    <hr class="my-6 border-gray-200 sm:mx-auto  lg:my-8" />
-    <div class="sm:flex sm:items-center sm:justify-between">
-        <span class="text-sm text-gray-500 sm:text-center "><a href="/" class="hover:underline">
-          جميع الحقوق محفوظة لمركز اركان للعيون
-        </a>.© 2024 
-        </span>
-        <div class="flex mt-4 sm:justify-center sm:mt-0">
-            <a href="https://www.facebook.com/profile.php?id=61561880304599" class="text-gray-500 hover:text-gray-900 ">
-                <svg class="w-4 h-4" aria-hidden="true" xmlns="http://www.w3.org/2000/svg" fill="currentColor" viewBox="0 0 8 19">
-                      <path fill-rule="evenodd" d="M6.135 3H8V0H6.135a4.147 4.147 0 0 0-4.142 4.142V6H0v3h2v9.938h3V9h2.021l.592-3H5V3.591A.6.6 0 0 1 5.592 3h.543Z" clip-rule="evenodd"/>
-                  </svg>
-                <span class="sr-only">Facebook page</span>
-            </a>
-        </div>
-    </div>
-  </div>
 </footer>
